Added build functionality
