# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /api/v1
 definitions:
+  models.AddBuild:
+    properties:
+      name:
+        example: Build 1
+        type: string
+      user_id:
+        example: c347a056-e10f-4b07-aeab-94c36194036b
+        type: string
+    type: object
   models.AddPhase:
     properties:
       data:
@@ -24,6 +33,22 @@ definitions:
         type: string
       password:
         example: password
+        type: string
+    type: object
+  models.Build:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      updated_at:
+        type: string
+      user:
+        $ref: '#/definitions/models.User'
+        type: object
+      user_id:
         type: string
     type: object
   models.Phase:
@@ -96,6 +121,180 @@ info:
   title: M&M Simulation's API
   version: "1.0"
 paths:
+  /builds:
+    get:
+      consumes:
+      - application/json
+      description: get all builds
+      parameters:
+      - description: Access Token of successful authentication
+        in: header
+        name: access-token
+        required: true
+        type: string
+      - description: Client Header of successful authentication
+        in: header
+        name: client
+        required: true
+        type: string
+      - description: Expiry Header of successful authentication
+        in: header
+        name: expiry
+        required: true
+        type: string
+      - description: uid of user
+        in: header
+        name: uid
+        required: true
+        type: string
+      - description: name search by q
+        in: query
+        name: q
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          headers:
+            Token:
+              description: qwerty
+              type: string
+          schema:
+            items:
+              $ref: '#/definitions/models.Build'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/web.HTTPError'
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/web.HTTPError'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/web.HTTPError'
+            type: object
+      summary: List builds
+    post:
+      consumes:
+      - application/json
+      description: add by json Build
+      parameters:
+      - description: Access Token of successful authentication
+        in: header
+        name: access-token
+        required: true
+        type: string
+      - description: Client Header of successful authentication
+        in: header
+        name: client
+        required: true
+        type: string
+      - description: Expiry Header of successful authentication
+        in: header
+        name: expiry
+        required: true
+        type: string
+      - description: uid of user
+        in: header
+        name: uid
+        required: true
+        type: string
+      - description: Add Build
+        in: body
+        name: Build
+        required: true
+        schema:
+          $ref: '#/definitions/models.AddBuild'
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Build'
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/web.HTTPError'
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/web.HTTPError'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/web.HTTPError'
+            type: object
+      summary: Add a Build
+      tags:
+      - builds
+  /builds/{id}:
+    get:
+      consumes:
+      - application/json
+      description: get string by ID
+      parameters:
+      - description: Access Token of successful authentication
+        in: header
+        name: access-token
+        required: true
+        type: string
+      - description: Client Header of successful authentication
+        in: header
+        name: client
+        required: true
+        type: string
+      - description: Expiry Header of successful authentication
+        in: header
+        name: expiry
+        required: true
+        type: string
+      - description: uid of user
+        in: header
+        name: uid
+        required: true
+        type: string
+      - description: Build ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Build'
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/web.HTTPError'
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/web.HTTPError'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/web.HTTPError'
+            type: object
+      summary: Show a build
+      tags:
+      - builds
   /phases:
     get:
       consumes:
