# models/build.go
@@ -1,0 +1,57 @@
+package models
+
+import (
+	"encoding/json"
+	"github.com/gobuffalo/pop"
+	"github.com/gobuffalo/validate"
+	"github.com/gofrs/uuid"
+	"time"
+)
+
+type Build struct {
+	ID        uuid.UUID `json:"id" db:"id"`
+	Name	string `json:"name" db:"name"`
+	User      User      `belongs_to:"user"`
+	UserID    uuid.UUID `json:"user_id" db:"user_id"`
+	CreatedAt time.Time `json:"created_at" db:"created_at"`
+	UpdatedAt time.Time `json:"updated_at" db:"updated_at"`
+}
+
+// String is not required by pop and may be deleted
+func (b Build) String() string {
+	jb, _ := json.Marshal(b)
+	return string(jb)
+}
+
+// Builds is not required by pop and may be deleted
+type Builds []Build
+
+// String is not required by pop and may be deleted
+func (b Builds) String() string {
+	jb, _ := json.Marshal(b)
+	return string(jb)
+}
+
+// Validate gets run every time you call a "pop.Validate*" (pop.ValidateAndSave, pop.ValidateAndCreate, pop.ValidateAndUpdate) method.
+// This method is not required and may be deleted.
+func (b *Build) Validate(tx *pop.Connection) (*validate.Errors, error) {
+	return validate.NewErrors(), nil
+}
+
+// ValidateCreate gets run every time you call "pop.ValidateAndCreate" method.
+// This method is not required and may be deleted.
+func (b *Build) ValidateCreate(tx *pop.Connection) (*validate.Errors, error) {
+	return validate.NewErrors(), nil
+}
+
+// ValidateUpdate gets run every time you call "pop.ValidateAndUpdate" method.
+// This method is not required and may be deleted.
+func (b *Build) ValidateUpdate(tx *pop.Connection) (*validate.Errors, error) {
+	return validate.NewErrors(), nil
+}
+
+// AddBuild example
+type AddBuild struct {
+	Name string `json:"name" example:"Build 1"`
+	UserID string `json:"user_id" example:"c347a056-e10f-4b07-aeab-94c36194036b"`
+}
